<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lista de Vendas</string>
    <string name="cadastrar">Salvar</string>
    <string name="action_novo">Cadastrar Venda</string>
    <string name="action_lista">Visualizar Vendas</string>
    <string name="criarlistaVenda">Gerar Lista de Vendas</string>
    <string name="grafico_vendas">Relatório de Vendas</string>
    <string name="title_activity_cadastro">Cadastro de Vendas</string>
    <string name="valor">Total da Venda</string>
    <string name="qtdVendidaList">Quantidade: </string>
    <string name="digiteData">Digite a Data para filtrar</string>
    <string name="qtd">Quantidade</string>
    <string name="descricao_produto">Produto: </string>
    <string name="precoUnitario">Preço Un</string>
    <string name="id_produto">Código</string>
    <string name="selecionar">Selecionar</string>
    <string name="uf_cidade">Estado</string>
    <string name="produto_selecionado">Produto</string>
    <string name="cidade">Cidade</string>
    <string name="data">Data da Venda</string>
    <string name="data_ini">Data Inicial</string>
    <string name="data_fim">Data Final</string>
    <string name="filtrar">Filtrar</string>
    <string name="dataList">Data da Venda: </string>
    <string name="title_activity_lista_vendas_activit">Vendas Realizadas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Menu</string>
    <string name="title_activity_lista_produtos">Produtos</string>
    <string name="title_activity_lista_cidade">Cidades</string>
    <string name="title_activity_grafico">Relatório de Vendas</string>
    <string name="title_activity_filtra_vendas">Filtrar Vendas</string>

</resources>