<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/novo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_novo"
       />
        <item
        android:id="@+id/lista"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_lista"
       />
                <item
        android:id="@+id/criarlistaVendas"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/criarlistaVenda"
       />
                                <item
        android:id="@+id/grafico_vendas"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/grafico_vendas"
       />
                

</menu>
