<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0, 1" >

    
        <TableRow>

        <Button
            android:id="@+id/busca_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buscaProduto"
            android:text="@string/produto" />
    </TableRow>
    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor" />
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/precoVenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qtd" />
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/qtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selecionarData"
            android:text="@string/data" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/produto" />
    </TableRow>

    <TableRow>

        <Spinner
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cidade" />
    </TableRow>

    <TableRow>

        <Spinner
            android:id="@+id/tipodealerta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <RadioGroup>
    </RadioGroup>

    <TableRow>

        <Button
            android:id="@+id/cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cadastrarVenda"
            android:text="@string/cadastrar" />
    </TableRow>

</TableLayout>